varie e minori cambiamenti su viste

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -291,3 +291,10 @@ h2 {
 #searchBox {
 	text-align: right;
 }
+
+
+#feedback { font-size: 1.4em; }
+#selectable .ui-selecting { background: #cd0a0a; }
+#selectable .ui-selected { background: #cccccc; color: white; }
+#selectable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
+#selectable li { margin: 3px; padding: 0.4em; font-size: 1.4em; height: 18px; }
